--- a/src/app/views/admin/contact/contact-list/contact-list.component.html
+++ b/src/app/views/admin/contact/contact-list/contact-list.component.html
@@ -1,33 +1,39 @@
 <app-breadcrumbs nodeParent="Accueil" nodeParentUrl="home" nodeChild="Contacts"></app-breadcrumbs>
 
-<section class="h-full py-18">
-  <div class="container">
-    <table class="table table-striped">
-      <thead>
+<section class="py-6 space-y-6">
+  <div class="flex flex-col w-10/12 mx-auto justify-center">
+    <p-table [value]="(contactsWithButtons$ | async) ?? []" [tableStyle]="{ 'min-width': '50rem' }">
+      <ng-template #header>
         <tr>
-          <th class="col-1">Action</th>
-          <th class="col-2">Identité</th>
-          <th class="col-2">Email</th>
-          <th class="col-1">Sujet</th>
-          <th class="col-6">Message</th>
+          <th class="w-1/12 !text-center">Action</th>
+          <th class="w-2/12">Identité</th>
+          <th class="w-2/12">Email</th>
+          <th class="w-2/12">Sujet</th>
+          <th class="w-3/12">Message</th>
         </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let contact of contacts; let i = index">
-          <td>
-            <!--<a class="btn btn-sm btn-outline-light link-warning" (click)="onEditContact(contact.key)">
+      </ng-template>
+      <ng-template #body let-contact>
+        <tr class="!text-center md:space-x-6 space-x-1.5 md:p-2 p-0">
+          <td class="border border-gray-300 !text-center space-x-4 p-2">
+            <!-- <a
+              class="btn btn-sm btn-outline-light link-warning"
+              (click)="onEdit(contact.contact.key)"
+            >
               <i class="fas fa-edit"></i>
-            </a>-->
-            <a class="btn btn-sm btn-outline-light link-danger" (click)="onDeleteContact(contact)">
+            </a> -->
+            <a
+              class="btn btn-sm btn-outline-light link-danger"
+              (click)="onDelete($event, contact.contact)"
+            >
               <i class="fas fa-trash"></i>
             </a>
           </td>
-          <td>{{ contact.name }}</td>
-          <td>{{ contact.email }}</td>
-          <td>{{ contact.subject }}</td>
-          <td>{{ contact.message }}</td>
+          <td class="border border-gray-300 p-2">{{ contact.contact.name }}</td>
+          <td class="border border-gray-300 p-2">{{ contact.contact.email }}</td>
+          <td class="border border-gray-300 p-2">{{ contact.contact.subject }}</td>
+          <td class="border border-gray-300 p-2">{{ contact.contact.message }}</td>
         </tr>
-      </tbody>
-    </table>
+      </ng-template>
+    </p-table>
   </div>
 </section>
