Update Service, mise en place de l'authentification avec angular/fire

--- a/src/app/views/admin/user/user-edit/user-edit.component.html
+++ b/src/app/views/admin/user/user-edit/user-edit.component.html
@@ -6,12 +6,8 @@
   nodeChildChild="Modifier un profil"
 ></app-breadcrumbs>
 
-<section class="h-full py-18">
-  <div class="container">
-    <div class="flex justify-center">
-      <div class="col-sm-8">
-        <app-user-form></app-user-form>
-      </div>
-    </div>
+<section class="md:py-14 py-6 flex w-10/12 mx-auto justify-center">
+  <div class="w-full space-y-8">
+    <app-user-form></app-user-form>
   </div>
 </section>
