--- a/src/app/views/change-password/change-password.component.html
+++ b/src/app/views/change-password/change-password.component.html
@@ -1,44 +1,58 @@
-<div class="flex justify-center">
-  <div class="col-sm-12 formStyle">
-    <div class="flex justify-center">
-      <h2 class="styleTitle">Changement de mot de passe</h2>
-      <form class="flex g-3" [formGroup]="passwordForm" (ngSubmit)="onSubmitForm()">
-        <div class="form-group">
-          <label>Nouveau Mot de passe</label>
-          <input
-            type="password"
-            formControlName="password"
-            class="form-control form-control-sm"
-            [ngClass]="{ 'is-invalid': shouldShowPasswordError() }"
-          />
-          <div *ngIf="f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Le nouveau mot de passe est requis</div>
-            <div *ngIf="f.password.errors.minlength">
-              Le mot de passe doit avoir au moins 6 caractères
-            </div>
-          </div>
+<div class="flex flex-col space-y-7 justify-center formStyle">
+  <h2 class="styleTitle">Changement de mot de passe</h2>
+  <form
+    class="flex flex-col space-y-7 w-11/12 md:w-8/12 justify-center mx-auto"
+    [formGroup]="passwordForm"
+    (ngSubmit)="onSubmitForm()"
+  >
+    <div class="form-group">
+      <p-floatlabel variant="on">
+        <p-password
+          formControlName="password"
+          styleClass="w-full"
+          [inputStyleClass]="'w-full'"
+          [feedback]="false"
+          [toggleMask]="true"
+          [ngClass]="{ 'ng-invalid ng-dirty': shouldShowPasswordError() }"
+        />
+        <label for="password">Nouveau Mot de passe</label>
+      </p-floatlabel>
+      <div
+        *ngIf="f.password.errors && (f.password.touched || f.password.dirty)"
+        class="text-red-600 text-sm mt-1"
+      >
+        <div *ngIf="f.password.errors.required">Le nouveau mot de passe est requis</div>
+        <div *ngIf="f.password.errors.minlength">
+          Le mot de passe doit avoir au moins 6 caractères
         </div>
-        <div class="form-group">
-          <label>Confirmer Nouveau Mot de passe</label>
-          <input
-            type="password"
-            formControlName="confirmPassword"
-            class="form-control form-control-sm"
-            [ngClass]="{ 'is-invalid': shouldShowConfirmPasswordError() }"
-          />
-          <div *ngIf="f.confirmPassword.errors" class="invalid-feedback">
-            <div *ngIf="f.confirmPassword.errors.required">
-              La confirmation du nouveau mot de passe est requis
-            </div>
-            <div *ngIf="f.confirmPassword.errors.mustMatch">
-              Les mots de passe doivent être identique
-            </div>
-          </div>
-        </div>
-        <button class="btn btn-primary" type="submit" [disabled]="passwordForm.invalid">
-          Mettre à jour
-        </button>
-      </form>
+      </div>
     </div>
-  </div>
+    <div class="form-group">
+      <p-floatlabel variant="on">
+        <p-password
+          formControlName="confirmPassword"
+          styleClass="w-full"
+          [inputStyleClass]="'w-full'"
+          [feedback]="false"
+          [toggleMask]="true"
+          [ngClass]="{ 'ng-invalid ng-dirty': shouldShowConfirmPasswordError() }"
+        />
+        <label for="confirmPassword">Confirmer Mot de passe</label>
+      </p-floatlabel>
+      <div
+        *ngIf="f.confirmPassword.errors && (f.confirmPassword.touched || f.confirmPassword.dirty)"
+        class="text-red-600 text-sm mt-1"
+      >
+        <div *ngIf="f.confirmPassword.errors.required">
+          La confirmation du nouveau mot de passe est requis
+        </div>
+        <div *ngIf="f.confirmPassword.errors.mustMatch">
+          Les mots de passe doivent être identique
+        </div>
+      </div>
+    </div>
+    <p-button class="flex w-full justify-center" type="submit" [disabled]="passwordForm.invalid">
+      Mettre à jour
+    </p-button>
+  </form>
 </div>
