--- a/src/app/views/orderer-list/orderer-list.component.html
+++ b/src/app/views/orderer-list/orderer-list.component.html
@@ -1,6 +1,6 @@
-<div class="col-sm-12 formStyle">
-  <div class="flex justify-center">
+<div class="formStyle">
+  <div class="flex flex-col justify-center dark:text-white space-y-7 text-center">
     <h2 class="styleTitle">Commandes</h2>
-    En cours d'élaboration
+    <p>En cours d'élaboration</p>
   </div>
 </div>
