--- a/src/app/views/admin/user/user-form/user-form.component.html
+++ b/src/app/views/admin/user/user-form/user-form.component.html
@@ -1,133 +1,149 @@
-<div class="flex justify-center">
-  <div class="col-sm-12 formStyle">
-    <div class="flex justify-center">
-      <h2 class="styleTitle">Modifier le profil</h2>
-    </div>
-    <form [formGroup]="userForm" (ngSubmit)="onSubmitForm()">
-      <div class="flex">
-        <div class="col-4" style="text-align: center">
-          <div
-            class="bd-placeholder-img rounded-circle"
-            style="background-color: #ccc; width: 140px; height: 140px"
-          >
-            <img
-              *ngIf="fileUrl"
-              class="rounded-circle"
-              src="{{ fileUrl }}"
-              style="width: 140px; height: 140px; position: absolute"
-            />
-            <img
-              class="rounded-circle"
-              src="{{ fileUrl }}"
-              style="width: 140px; height: 140px; position: absolute"
-            />
-            <label for="file-upload" class="custom-file-upload rounded-circle">
-              <i class="fas fa-upload"></i>
-            </label>
-          </div>
-          <input
-            id="file-upload"
-            type="file"
-            class="profil"
-            (change)="detectFiles($event)"
-            accept="image/*"
+<div class="flex flex-col space-y-8 justify-center formStyle">
+  <div class="flex justify-center">
+    <h2 class="styleTitle">Modifier le profil</h2>
+  </div>
+  <form [formGroup]="userForm" (ngSubmit)="onSubmitForm()" class="space-y-7">
+    <div
+      class="md:grid md:grid-cols-2 md:items-center flex flex-col w-11/12 space-y-7 md:space-y-0 md:space-x-4 space-x-0 mx-auto"
+    >
+      <div class="flex justify-center">
+        <div
+          class="bd-placeholder-img rounded-circle"
+          style="background-color: #ccc; width: 140px; height: 140px"
+        >
+          <img
+            *ngIf="fileUrl"
+            class="rounded-circle"
+            src="{{ fileUrl }}"
+            style="width: 140px; height: 140px; position: absolute"
           />
-          <p class="text-success" *ngIf="fileUploaded">Photo uploadé!</p>
+          <img
+            class="rounded-circle"
+            src="{{ fileUrl }}"
+            style="width: 140px; height: 140px; position: absolute"
+          />
+          <label for="file-upload" class="custom-file-upload rounded-circle">
+            <i class="fas fa-upload"></i>
+          </label>
         </div>
-        <div class="col-8">
-          <div class="flex">
-            <div class="col">
-              <label for="displayName">Pseudo</label>
-              <input
-                type="text"
-                id="displayName"
-                class="form-control"
-                formControlName="displayName"
-                readonly
-              />
-            </div>
-          </div>
-          <div class="flex">
-            <div class="col">
-              <label for="email">Email</label>
-              <input type="text" id="email" class="form-control" formControlName="email" readonly />
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="form-group form-control-sm" style="margin-top: 2rem">
-        <label for="surname">Nom</label>
         <input
-          type="text"
-          id="surname"
-          class="form-control"
-          formControlName="surname"
-          [ngClass]="{ 'is-invalid': shouldShowSurnameError() }"
+          id="file-upload"
+          type="file"
+          class="profil"
+          (change)="detectFiles($event)"
+          accept="image/*"
         />
+      </div>
+      <div class="flex flex-col space-y-7">
+        <p-floatlabel variant="on">
+          <label for="displayName">Pseudo</label>
+          <input
+            type="text"
+            id="displayName"
+            pInputText
+            class="form-control w-full"
+            formControlName="displayName"
+            readonly
+          />
+        </p-floatlabel>
+        <p-floatlabel variant="on">
+          <label for="email">Email</label>
+          <input
+            type="text"
+            pInputText
+            id="email"
+            class="form-control w-full"
+            formControlName="email"
+            readonly
+          />
+        </p-floatlabel>
+      </div>
+    </div>
+    <div class="flex flex-col md:w-7/12 w-11/12 mx-auto jutify-center space-y-7">
+      <div class="form-group">
+        <p-floatlabel variant="on">
+          <label for="surname">Nom</label>
+          <input
+            type="text"
+            id="surname"
+            class="form-control w-full"
+            pInputText
+            formControlName="surname"
+            [ngClass]="{ 'is-invalid': shouldShowSurnameError() }"
+          />
+        </p-floatlabel>
         <div *ngIf="f.surname.errors" class="invalid-feedback">
           <div *ngIf="f.surname.errors.required">Le nom est obligatoire</div>
         </div>
       </div>
-      <div class="form-group form-control-sm">
-        <label for="name">Prénom</label>
-        <input
-          type="text"
-          id="name"
-          class="form-control"
-          formControlName="name"
-          [ngClass]="{ 'is-invalid': shouldShowNameError() }"
-        />
+      <div class="form-group">
+        <p-floatlabel variant="on">
+          <label for="name">Prénom</label>
+          <input
+            type="text"
+            id="name"
+            class="form-control w-full"
+            pInputText
+            formControlName="name"
+            [ngClass]="{ 'is-invalid': shouldShowNameError() }"
+          />
+        </p-floatlabel>
         <div *ngIf="f.name.errors" class="invalid-feedback">
           <div *ngIf="f.name.errors.required">Le prénom est obligatoire</div>
         </div>
       </div>
-      <div class="form-group form-control-sm">
-        <label for="adress">Adresse</label>
-        <textarea
-          type="text"
-          id="adress"
-          class="form-control"
-          formControlName="adress"
-          [ngClass]="{ 'is-invalid': shouldShowAdresseError() }"
-        >
-        </textarea>
+      <div class="form-group">
+        <p-floatlabel variant="on">
+          <label for="adress">Adresse</label>
+          <textarea
+            id="adress"
+            class="form-control w-full"
+            pTextarea
+            rows="6"
+            formControlName="adress"
+            [ngClass]="{ 'is-invalid': shouldShowAdresseError() }"
+          >
+          </textarea>
+        </p-floatlabel>
         <div *ngIf="f.adress.errors" class="invalid-feedback">
           <div *ngIf="f.adress.errors.required">L'adresse est obligatoire</div>
         </div>
       </div>
-      <div class="form-group form-control-sm">
-        <label for="zipcode">Code Postal</label>
-        <input
-          type="text"
-          id="zipcode"
-          class="form-control"
-          formControlName="zipcode"
-          [ngClass]="{ 'is-invalid': shouldShowZipCodeError() }"
-        />
+      <div class="form-group">
+        <p-floatlabel variant="on">
+          <label for="zipcode">Code Postal</label>
+          <input
+            type="text"
+            id="zipcode"
+            class="form-control w-full"
+            pInputText
+            formControlName="zipcode"
+            [ngClass]="{ 'is-invalid': shouldShowZipCodeError() }"
+          />
+        </p-floatlabel>
         <div *ngIf="f.zipcode.errors" class="invalid-feedback">
           <div *ngIf="f.zipcode.errors.required">Le code postal est obligatoire</div>
         </div>
       </div>
-      <div class="form-group form-control-sm">
-        <label for="city">Ville</label>
-        <input
-          type="text"
-          id="city"
-          class="form-control"
-          formControlName="city"
-          [ngClass]="{ 'is-invalid': shouldShowCityError() }"
-        />
+      <div class="form-group">
+        <p-floatlabel variant="on">
+          <label for="city">Ville</label>
+          <input
+            type="text"
+            id="city"
+            class="form-control w-full"
+            pInputText
+            formControlName="city"
+            [ngClass]="{ 'is-invalid': shouldShowCityError() }"
+          />
+        </p-floatlabel>
         <div *ngIf="f.city.errors" class="invalid-feedback">
           <div *ngIf="f.city.errors.required">La ville est obligatoire</div>
         </div>
       </div>
-      <div class="flex" style="margin-top: 2rem">
-        <div class="col">
-          <button class="btn btn-success" type="submit" [disabled]="userForm.invalid">
-            Enregistrer
-          </button>
-        </div>
-      </div>
-    </form>
-  </div>
+    </div>
+    <div class="flex w-full justify-center">
+      <p-button type="submit" [disabled]="userForm.invalid"> Enregistrer </p-button>
+    </div>
+  </form>
 </div>
