--- a/src/app/views/admin/user/user-list/user-list.component.html
+++ b/src/app/views/admin/user/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumbs
-  nodeParent="Accueil"
-  nodeParentUrl="home"
-  nodeChild="Utilisateurs"
+  [nodeParent]="resource.layout.header.menu.home"
+  [nodeParentUrl]="resource.router.routes.home"
+  [nodeChild]="resource.layout.header.menu.users"
 ></app-breadcrumbs>
 
 <section class="py-6 space-y-6">
@@ -18,31 +18,31 @@
           <th class="w-1/12">Compte</th>
         </tr>
       </ng-template>
-      <ng-template #body let-user>
+      <ng-template #body let-item>
         <tr>
           <td class="border border-gray-300 !text-center md:space-x-6 space-x-1.5 md:p-2 p-0">
-            <a (click)="onView($event, user.user)">
+            <a (click)="onView($event, item.user)">
               <i class="fas fa-search"></i>
             </a>
-            <a (click)="onEdit(user.user.key)">
+            <a (click)="onEdit(item.user.key)">
               <i class="fas fa-edit"></i>
             </a>
-            <a (click)="onDelete($event, user.user)">
+            <a (click)="onDelete($event, item.user)">
               <i class="fas fa-trash"></i>
             </a>
           </td>
-          <td>{{ user.user.email }}</td>
-          <td>{{ user.user.displayName }}</td>
-          <td>{{ user.user.surname }}</td>
-          <td>{{ user.user.name }}</td>
+          <td>{{ item.user.email }}</td>
+          <td>{{ item.user.displayName }}</td>
+          <td>{{ item.user.surname }}</td>
+          <td>{{ item.user.name }}</td>
           <td class="!text-center">
-            <a (click)="setAdmin(user.user)">
-              <i class="fas" [ngClass]="user.user.admin ? 'fa-toggle-on' : 'fa-toggle-off'"></i>
+            <a (click)="setAdmin(item.user)">
+              <i class="fas" [ngClass]="item.user.admin ? 'fa-toggle-on' : 'fa-toggle-off'"></i>
             </a>
           </td>
           <td class="!text-center">
-            <a *ngIf="!user.user.admin" (click)="setDisabled(user.user)">
-              <i class="fas" [ngClass]="user.user.disabled ? 'fa-toggle-on' : 'fa-toggle-off'"></i>
+            <a *ngIf="!item.user.admin" (click)="setDisabled(item.user)">
+              <i class="fas" [ngClass]="item.user.disabled ? 'fa-toggle-on' : 'fa-toggle-off'"></i>
             </a>
           </td>
         </tr>
