--- a/src/app/views/admin/user/user-edit/user-edit.component.html
+++ b/src/app/views/admin/user/user-edit/user-edit.component.html
@@ -1,9 +1,9 @@
 <app-breadcrumbs
-  nodeParent="Accueil"
-  nodeParentUrl="home"
-  nodeChild="Utilisateurs"
-  nodeChildUrl="users"
-  nodeChildChild="Modifier un profil"
+  [nodeParent]="resource.layout.header.menu.home"
+  [nodeParentUrl]="resource.router.routes.home"
+  [nodeChild]="resource.layout.header.menu.users"
+  [nodeChildUrl]="resource.router.routes.profile"
+  [nodeChildChild]="resource.generic.edit_m.format(resource.layout.header.menu.profile)"
 ></app-breadcrumbs>
 
 <section class="md:py-14 py-6 flex w-10/12 mx-auto justify-center">
